--- a/index_v1.html
+++ b/index_v1.html
@@ -8,12 +8,14 @@
 
     <title>restfull</title>
 
-    <link rel="shortcut icon" href="favicon.ico"> <link href="css/bootstrap.min.css?v=3.3.5" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico"> 
+    <link href="css/bootstrap.min.css?v=3.3.5" rel="stylesheet">
     <link href="css/font-awesome.min.css?v=4.4.0" rel="stylesheet">
 
     <link href="css/animate.min.css" rel="stylesheet">
     <link href="css/style.min.css?v=4.0.0" rel="stylesheet">
-    <link rel="stylesheet" href="plugins/jsonFormater-master/jsonFormater.css" />
+    <link rel="stylesheet" href="js/plugins/jsonFormater/jsonFormater.css" />
+    <!--<link rel="stylesheet" href="js/plugins/select2/select2.min.css" />-->
     <base target="_blank">
 
 </head>
@@ -34,7 +36,9 @@
 		                            	<select class="form-control m-b" name="account" style="margin-top: -5px;" id="method">
 		                                </select>
 		                            </div>
-		                            <input type="text" class="form-control" placeholder="请输入请求地址" id="url-input">
+		                            <input type="text" class="form-control" placeholder="请输入请求地址" id="url-input" oninput="setIntervalTemp(this)">
+		                            <input type="text" class="form-control" placeholder="请输入请求地址" id="url-input_temp" style="display: none;">
+		                             <input type="text" class="form-control" placeholder="请输入请参数" id="url-input_params" style="display: none;">
 		                            <div class="input-group-btn">
 		                            	<button class="btn btn-white" type="button" id="params-btn" name="params">Params</button>
 		                            </div>
@@ -99,7 +103,33 @@
 		                        </div>
 		                        <div id="tab-headers" class="tab-pane">
 		                            <div class="panel-body">
-		                                <strong>移动设备优先</strong>
+		                               <!-- params start -->
+				                       <div class="input-group col-sm-12 params_content" id="tab_headers_content">
+				                       <div class="row">
+				                       	<div class="form-group">
+				                            <label>标签</label>
+				                            <select id="tags-select" class="select2 form-control" >
+				                            	<option value="1">中国</option>
+				                            	<option value="2">中国2</option>
+				                            	<option value="3">中国3</option>
+				                            </select>
+				                        </div>
+				                       </div>
+					                    	<!--____________     ________________________ ☰ ✘-->
+					                    	<div class="row" id="params_row">
+						                        <div class="col-sm-4">
+						                        	<div class="m-b">
+							                        	<input type="text" id="tab_headers_row_key" placeholder="key" class="form-control" onfocus="createNextDivRowHtmlParams(this)">
+						                        	</div>
+						                        </div>
+						                        <div class="col-sm-7">
+						                        	<div class="input-group m-b">
+							                            <input type="text" id="tab_header_row_val" placeholder="value" class="form-control" onfocus="createNextDivRowHtmlParams(this)">
+							                        	<span class="input-group-addon" style="padding: 0px 1px 0 5px; border: none; font-size: 11px;" name="params" onclick="editParam2DivRows(this)">Builk Edit</span>
+						                        	</div>
+						                        </div>
+					                        </div>
+					                    </div><!-- params end -->
 		                            </div>
 		                        </div>
 		                        <div id="tab-body" class="tab-pane">
@@ -167,9 +197,11 @@
     <script src="js/bootstrap.min.js?v=3.3.5"></script>
     <!--<script src="js/plugins/layer/layer.min.js"></script>-->
     <script src="js/content.min.js"></script>
-    <script src="plugins/jsl.format.js"></script>
-    <script src="plugins/jsonFormater-master/jsonFormater.js"></script>
+    <!--<script src="plugins/jsl.format.js"></script>-->
+    <script src="js/plugins/jsonFormater/jsonFormater.js"></script>
     <!--<script src="js/welcome.min.js"></script>-->
+    <!--<script type="text/javascript" src="js/plugins/select2/select2.min.js"></script>-->
+    <script type="text/javascript" src="pagesjs/comment-util.js" ></script>
     <script src="pagesjs/index_v1.js"></script>
     <script>
     	$(function() {
@@ -189,7 +221,16 @@
 					$('#params_content').hide();
 				}
 			});
+			
 			initSelectMethod();
+			
+			//select2初始化
+            /*$(".select2").select2({
+//              tags: true,
+//              tokenSeparators: [',', ' '],
+                placeholder:"输入标签",
+//              data:data
+            });*/
 		});
     </script>
 </body>
