--- a/index.html
+++ b/index.html
@@ -650,6 +650,19 @@
     <script src="js/hplus.min.js?v=4.0.0"></script>
     <script type="text/javascript" src="js/contabs.min.js"></script>
     <script src="js/plugins/pace/pace.min.js"></script>
+    <!--
+    	作者：2307187356@qq.com
+    	时间：2018-08-16
+    	描述：输入提示
+    -->
+    <script src="js/plugins/autocomplete/jquery.autocomplete.js"></script>
+    <!--
+    	作者：2307187356@qq.com
+    	时间：2018-08-16
+    	描述：常量
+    -->
+    <script src="pagesjs/constant-util.js"></script>
+     
 </body>
 
 </html>
